# caterminator

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
caterminator/: main.py
caterminator/functions/: categorizer.py  parser.py
caterminator/utils/: logging_config.py
caterminator/visualization/: finance_analysis.py  transaction_dashboard.py
config/: categories.json  paths.json
tests/: conftest.py  test_categorizer.py  test_parser.py
tests/fixtures/: sample_bank_statement.csv
